RegressionTests/TestSuiteExport/accept/expressions.blade
// EXPECT: pass

cog task main() {
    cog var a: u32 = 1 + 2 * 3;
    cog var b: u32 = (1 + 2) * 3;
    cog var c: bool = !true;
}