RegressionTests/TestSuiteExport/reject/type_mismatch.blade
// EXPECT: fail
// DIAGNOSTICS: E0205

cog task main() {
    var flag: bool = 1;
}